--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PepSi.PZ</title>
-    <link rel="shortcut icon" type="image/png" href="/images/logo.ico" />
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.ico" />
 
     <link rel="stylesheet" href="css/style.css" />
   </head>
